--- a/app/src/main/res/layout/login_libsys_login.xml
+++ b/app/src/main/res/layout/login_libsys_login.xml
@@ -24,6 +24,13 @@
             android:gravity="center"
             android:orientation="vertical">
 
+            <Button
+                android:id="@+id/btn_tester"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="testOnClick"
+                android:text="Testing Button" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
