--- a/app/src/main/res/layout/adjust_inventory.xml
+++ b/app/src/main/res/layout/adjust_inventory.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".MainActivity">
+    tools:context=".user_home_pages.LibrarianHomePage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:id="@+id/hometxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Manage Account"
+                android:text="Adjust Inventory"
                 android:textColor="#FFFF"
                 android:textSize="24sp" />
 
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hometxt"
                 android:layout_marginTop="6dp"
-                android:text="LibSys Mobile - Librarian"
+                android:text="@string/librarian"
                 android:textColor="#FFFF"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -48,9 +48,9 @@
         </RelativeLayout>
 
         <GridLayout
-            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:alignmentMode="alignMargins"
             android:columnCount="2"
             android:columnOrderPreserved="false"
@@ -63,7 +63,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
+                app:cardElevation="60dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -73,20 +73,21 @@
                     android:padding="10dp">
 
                     <ImageButton
-                        android:id="@+id/btn_member_browse"
+                        android:id="@+id/btn_SearchMember"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/issue_book" />
+                        android:onClick="addBookOnClick"
+                        app:srcCompat="@drawable/add_book" />
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Issue Book"
+                        android:text="Add Book"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -99,7 +100,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
+                app:cardElevation="60dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -109,19 +110,20 @@
                     android:padding="10dp">
 
                     <ImageButton
-                        android:id="@+id/btn_member_search"
+                        android:id="@+id/btn_librarian_searchBook"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/return_book" />
+                        android:onClick="removeBookOnClick"
+                        android:src="@drawable/remove_book" />
 
                     <TextView
-                        android:textColor="#000"
-                        android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Return Book"
-                        android:textSize="18sp" />
+                        android:text="Remove Book"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -134,7 +136,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
+                app:cardElevation="60dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -146,84 +148,17 @@
                     <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/pay_balance" />
+                        android:onClick="editBookOnClick"
+                        android:src="@drawable/edit" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Pay Balance"
+                        android:text="Edit Book"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/extend" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Extend"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/issue_fine" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Issue Fine"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -231,6 +166,7 @@
 
 
         </GridLayout>
+
 
     </LinearLayout>
 
