--- a/app/src/main/res/layout/librarian_manage_user.xml
+++ b/app/src/main/res/layout/librarian_manage_user.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".user_home_pages.LibrarianHomePage">
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:id="@+id/hometxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Home"
+                android:text="Manage Account"
                 android:textColor="#FFFF"
                 android:textSize="24sp" />
 
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hometxt"
                 android:layout_marginTop="6dp"
-                android:text="LibSys Mobile- Librarian"
+                android:text="@string/librarian"
                 android:textColor="#FFFF"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -48,9 +48,9 @@
         </RelativeLayout>
 
         <GridLayout
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:alignmentMode="alignMargins"
             android:columnCount="2"
             android:columnOrderPreserved="false"
@@ -63,7 +63,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp">
+                app:cardElevation="60dp" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -73,21 +73,20 @@
                     android:padding="10dp">
 
                     <ImageButton
-                        android:id="@+id/btn_SearchMember"
+                        android:id="@+id/btn_member_browse"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:onClick="searchMemberOnClick"
-                        app:srcCompat="@drawable/search_member" />
+                        android:src="@drawable/issue_book" />
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Search Member"
+                        android:text="Issue Book"
                         android:textColor="#000"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -100,7 +99,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp">
+                app:cardElevation="60dp" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -110,20 +109,19 @@
                     android:padding="10dp">
 
                     <ImageButton
-                        android:id="@+id/btn_librarian_searchBook"
+                        android:id="@+id/btn_member_search"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:onClick="searchBookOnClick"
-                        android:src="@drawable/search" />
+                        android:src="@drawable/return_book" />
 
                     <TextView
+                        android:textColor="#000"
+                        android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Search Book"
-                        android:textColor="#000"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:text="Return Book"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -136,7 +134,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp">
+                app:cardElevation="60dp" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -148,17 +146,16 @@
                     <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:onClick="adjustInventoryOnClick"
-                        android:src="@drawable/adjust_inventory" />
+                        android:src="@drawable/pay_balance" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Adjust Inventory"
+                        android:text="Pay Balance"
                         android:textColor="#000"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -171,7 +168,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp">
+                app:cardElevation="60dp" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -183,17 +180,50 @@
                     <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:onClick="adjustInventoryOnClick"
-                        android:src="@drawable/manage_users" />
+                        android:src="@drawable/extend" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Manage User"
+                        android:text="Extend"
                         android:textColor="#000"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="15dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="60dp" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <ImageButton
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/issue_fine" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="Issue Fine"
+                        android:textColor="#000"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -201,7 +231,6 @@
 
 
         </GridLayout>
-
 
     </LinearLayout>
 
