--- a/app/src/main/res/layout/home_page_admin.xml
+++ b/app/src/main/res/layout/home_page_admin.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hometxt"
                 android:layout_marginTop="6dp"
-                android:text="LibSys Mobile - Admin"
+                android:text="@string/admin"
                 android:textColor="#FFFF"
                 android:textSize="16sp" />
 
@@ -117,13 +117,13 @@
                         android:src="@drawable/manage_users" />
 
                     <TextView
-                        android:textColor="#000"
-                        android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Manage User"
-                        android:textSize="18sp" />
+                        android:text="Assign Librarian"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
