--- a/app/src/main/res/layout/account_page_member.xml
+++ b/app/src/main/res/layout/account_page_member.xml
@@ -50,7 +50,10 @@
                 android:id="@+id/listView_books_issued"
                 android:layout_width="375dp"
                 android:layout_height="419dp"
-                android:layout_marginTop="241dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="188dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.85"
@@ -82,10 +85,10 @@
                 android:drawableStart="@drawable/ic_payment_24dp"
                 android:drawablePadding="15dp"
                 android:hint="amount owed"
-                android:textSize="20dp"
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -95,14 +98,18 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="Books Issued:"
                 android:textColor="@color/textBlack"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="7dp"
-                tools:layout_editor_absoluteY="123dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.208"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
